# hadoop-streaming

./: CHANGELOG.md  README.md  default.nix  hadoop-streaming.cabal  release.nix
.github/workflows/: ci.yml
src/: HadoopStreaming.hs
src/HadoopStreaming/: ByteString.hs  Text.hs
test/hspec/: HadoopStreamingSpec.hs
test/resource/: 1.in  1.mapper-out  1.mapper-out-oddkeys  1.reducer-out
