cabal-version:       2.4

name:                hadoop-streaming
version:             0.1.0.0
synopsis:            A simple Hadoop streaming library
description:
  A simple Hadoop streaming library based on <https://hackage.haskell.org/package/pipes pipes>,
  useful for writing mapper and reducer logic in Haskell and running it on AWS Elastic MapReduce,
  Azure HDInsight, GCP Dataproc, and so forth.
category:            Cloud, Distributed Computing, MapReduce
homepage:            https://github.com/zliu41/hadoop-streaming
bug-reports:         https://github.com/zliu41/hadoop-streaming/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ziyang Liu <free@cofree.io>
maintainer:          Ziyang Liu <free@cofree.io>
copyright:           2020 Ziyang Liu
build-type:          Simple
tested-with:         GHC==8.8.2, GHC==8.6.5, GHC==8.4.4

extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: https://github.com/zliu41/hadoop-streaming

library
  exposed-modules:
      HadoopStreaming
  other-modules:
      Paths_hadoop_streaming
  autogen-modules:
      Paths_hadoop_streaming
  hs-source-dirs:
      src
  build-depends:
      base >=4.8 && <5,
      extra >= 1.6.18 && <1.8,
      pipes >=4.3.13 && <4.4,
      text >=1.2.4.0 && <1.3
  default-language: Haskell2010
